# git.polytest-master

./: .gitignore  README.md  Шаблон.pages
1/english/материалы/: Stress and phonetics.docx  Неправильные_формы_множественного.docx  Таблица_неправильных_глаголов_английского.docx
1/fp/: Test.hs  Test_1.hs  Test_2.hs  Test_3.hs  Test_4.hs
1/graphic/1/: волкова.pages
1/graphic/2/: Балсутьев.docx
1/graphic/3/: онищук.doc
1/graphic/4/code/: .gitmodules  CMakeLists.txt  CMakeSettings.json  Drawer.h
2/adm/: 2.pptx  5.pkt  Работа 1.doc
2/adm/3/: 3.pptx
2/os/: сроки.docx
2/Душутина/: требования.docx
2/Малышев/: Работа 2.doc  Работа 3.doc
2/Оптимизация/: 13541-2_Мет_Опт_лаб.docx  Markov_Dec_tasks.doc
3/: .gitignore
3/fp/: p1.1.hs  p1.2.hs  p2.1.hs  p2.2.hs
3/graph/: advertisement.docx  concept.docx  concept.xml  offer.docx
3/project management/: Ерниязов Тимур.key  Ерниязов Тимур.pptx
english/masha-article/: preamble.tex
fp/: test.hs
graphic/1/: болсутьев.docx  ерниязоф.pages  коренек.docx
practice/: Индивидуальный_план_по_учебной.pages  Отзыв по УП 1 курс маг 2019.pages  Отчет по УП 1 курс маг 2019_1 ТИТУЛЬНИК.pages
practice/ерниязов/: Отзыв по УП 1 курс маг 2019.doc  Отчет по УП 1 курс маг 2019_.doc
practice/ивашкевич/: Индивидуальный_план_по_учебной.docx  Отзыв по УП 1 курс маг 2019.doc  Отчет по УП 1 курс маг 2019_.doc
technical-article/: bibliography.tex  conclusion.tex
булка с маслом/1/: main1.cpp  main10.cpp  main11.cpp  main12.cpp  main14.cpp  main3.cpp  main6.cpp  main9.cpp
булка с маслом/2/: task2.c  task5.c  task7.cpp
(+4279 files in other folders)
